objects/EasyPost_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>EasyPost_Integration__c</fullName>
        <label>EasyPost Integration</label>
        <referenceTo>EasyPost_Integration__mdt</referenceTo>
        <relationshipLabel>EasyPost Integration Field Mappings</relationshipLabel>
        <relationshipName>EasyPost_Integration_Field_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>PickList</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Object_API_Name__c</fullName>
        <label>Reference Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_API_Name_When_Referenced__c</fullName>
        <label>SF API Name When Referenced</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_API_Name__c</fullName>
        <label>Salesforce API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EasyPost Integration Field Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>EasyPost_Integration__c</columns>
        <columns>Parent_Object__c</columns>
        <columns>Reference_Object_API_Name__c</columns>
        <columns>Salesforce_API_Name__c</columns>
        <columns>Field_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Create_Shipment</fullName>
        <columns>MasterLabel</columns>
        <columns>EasyPost_Integration__c</columns>
        <columns>Parent_Object__c</columns>
        <columns>Reference_Object_API_Name__c</columns>
        <columns>Salesforce_API_Name__c</columns>
        <columns>Field_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EasyPost_Integration__c</field>
            <operation>equals</operation>
            <value>Create_Shipment</value>
        </filters>
        <label>Create Shipment</label>
    </listViews>
    <listViews>
        <fullName>Create_Shipment_Unwind</fullName>
        <columns>MasterLabel</columns>
        <columns>EasyPost_Integration__c</columns>
        <columns>Parent_Object__c</columns>
        <columns>Reference_Object_API_Name__c</columns>
        <columns>Salesforce_API_Name__c</columns>
        <columns>Field_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EasyPost_Integration__c</field>
            <operation>equals</operation>
            <value>Create_Shipment_Unwind</value>
        </filters>
        <label>Create Shipment Unwind</label>
    </listViews>
    <pluralLabel>EasyPost Integration Field Mappings</pluralLabel>
</CustomObject>